--- a/View/Pages/DodajPracownikaPage.xaml
+++ b/View/Pages/DodajPracownikaPage.xaml
@@ -90,7 +90,7 @@
 
         <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxPESEL" Text="{Binding Pesel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" Grid.Column="3" Grid.Row="2"  Grid.ColumnSpan="2" />
         <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxTelefon" Text="{Binding Telefon, Mode=TwoWay, StringFormat={}{:} , UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}"  Grid.Column="3" Grid.Row="3"   Grid.ColumnSpan="2"  />
-        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxWynagrodzenie"  Text="{Binding Wynagrodzenie, Mode=TwoWay, ValidatesOnNotifyDataErrors=True}" Grid.Column="3" Grid.Row="4"  Grid.ColumnSpan="2"  />
+        <TextBox Style="{DynamicResource TextBoxDefaultStyle}" x:Name="textBoxWynagrodzenie"  Text="{Binding Wynagrodzenie, Mode=TwoWay, ValidatesOnNotifyDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3" Grid.Row="4"  Grid.ColumnSpan="2"  />
 
         <Button Style="{DynamicResource ButtonDefaultStyle}" x:Name="dodaj" Content="Dodaj" Command="{Binding Dodaj}"  IsEnabled="{Binding ErrorFree, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="6"   CommandParameter="{Binding Mode=OneWay}" MinWidth="160" />
         <Button Style="{DynamicResource ButtonDefaultStyle}" x:Name="anuluj" Content="Anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="6"  MinWidth="160"  />
