--- a/Components/KlientPodsumowanie/KlientPodsumowanieNaglowek.xaml
+++ b/Components/KlientPodsumowanie/KlientPodsumowanieNaglowek.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:components="clr-namespace:Bank2.Components" 
              xmlns:viewmodel="clr-namespace:Bank2.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:VMKlienciPodsumowanie}">
-    <StackPanel  Background="green" Orientation="Vertical">
+    <StackPanel   Orientation="Vertical">
         <StackPanel Orientation="Horizontal" >
           
             <Button Command="{Binding Kredyty}" Content="Kredyty"/>
