--- a/View/Pages/DodajPracownikaPage.xaml
+++ b/View/Pages/DodajPracownikaPage.xaml
@@ -9,7 +9,9 @@
 
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DodajPracownikaPage">
+      Title="DodajPracownikaPage"
+       HorizontalAlignment="Center" VerticalAlignment="Center" 
+      >
 
 
     <Page.Resources>
