--- a/View/Windows/DodajKlientaWindow.xaml
+++ b/View/Windows/DodajKlientaWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:components ="clr-namespace:Bank2.Components"
         mc:Ignorable="d"
         
-         Title="oknoDodajKlienta" Name="NameoknododajKlienta"  Height="450" Width="800">
+         Title="oknoDodajKlienta" Name="NameoknododajKlienta"  Height="450" Width="800"  HorizontalAlignment="Center" VerticalAlignment="Center" >
     <Window.Resources>
       
 
