--- a/View/Windows/DodajLokateWindow.xaml
+++ b/View/Windows/DodajLokateWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Bank2.View.Windows"
         mc:Ignorable="d"
         xmlns:components="clr-namespace:Bank2.Components"
-        Title="DodajLokateWindow" Name="Nameokno_DodajKredyt"   MinHeight="400" MaxHeight="900" Width="800"  
+        Title="Dodaj Lokatę" Name="Nameokno_DodajKredyt"   MinHeight="800" Width="1800" HorizontalAlignment="Center" VerticalAlignment="Center"  
     >
     <Window.Resources>
      
@@ -58,12 +58,12 @@
         <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5" Grid.RowSpan="2">
             <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto"  >
 
-                <UserControl Content="{Binding TablicaDanych, Mode=TwoWay}"/>
+                <UserControl Content="{Binding TablicaDanych, Mode=TwoWay}" />
             </ScrollViewer>
             <Label Style="{DynamicResource LabelDefaultStyle}"   Width="300" HorizontalAlignment="Left" Content="Wybierz rodzaj kredytu"/>
             <ScrollViewer   VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" >
 
-                <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" />
+                <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}"  />
             </ScrollViewer>
         </StackPanel>
         <Button  Style="{DynamicResource ButtonDefaultStyle}" Content="dodaj" Command="{Binding Dodaj}" IsEnabled="{Binding ErrorFree, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"   />
