--- a/View/Windows/EdytujLokateWindow.xaml
+++ b/View/Windows/EdytujLokateWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Bank2.View.Windows"
      xmlns:components="clr-namespace:Bank2.Components"
         mc:Ignorable="d"
-         Title="oknoEdytujLokate" Name="NameoknoEdytujLokate" Height="auto" MinHeight="400" Width="800"  
+         Title="oknoEdytujLokate" Name="NameoknoEdytujLokate" MinHeight="800" Width="1800"  HorizontalAlignment="Center" VerticalAlignment="Center" 
       >
     <Window.Resources>
         <Style TargetType="TextBox">
